# routes/index.js
@@ -12,6 +12,7 @@ const ObjetosRouter = require('./objetos.router');
 const PermisosRouter = require('./permisos.router');
 const UsuariosRouter = require('./usuarios.router');
 const CuentasRouter = require('./cuentas.router');
+const AgentesRouter = require('./agentes.router');
 
 function routerApi(app) {
   const router = express.Router();
@@ -27,6 +28,7 @@ function routerApi(app) {
   router.use('/permisos', PermisosRouter);
   router.use('/usuarios', UsuariosRouter);
   router.use('/cuentas', CuentasRouter);
+  router.use('/agentes', AgentesRouter);
   router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 }
 
